Remove JDK17 validation