@@ -47,10 +47,6 @@ set "JAVAVER_MAJOR=%JAVAVER_MAJOR:~1,2%"
 if %JAVAVER_MAJOR% equ 11 (
     goto init
 )
-if %JAVAVER_MAJOR% equ 17 (
-    set "JAVA_OPTS=%JAVA_OPTS% --add-modules=java.se --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED --add-opens=java.base/java.util.stream=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
-    goto init
-)
 
 echo.
 echo A Java 11 JRE is required to run WINDUP. "%JAVA_HOME%\bin\java.exe" is version %JAVAVER%
